--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "netresearch/jsonmapper": "^4.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -36,6 +37,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "Appkr\\": "src/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
