non-laravel service(hello-service) example

--- a/hello-service/src/main/resources/config/application-dev.yml
+++ b/hello-service/src/main/resources/config/application-dev.yml
@@ -75,7 +75,7 @@ jhipster:
   #     max-age: 1800
   security:
     client-authorization:
-      access-token-uri: http://uaa/oauth/token
+      access-token-uri: http://localhost:9999/oauth/token
       token-service-id: uaa
       client-id: internal
       client-secret: internal
@@ -94,7 +94,7 @@ jhipster:
       queue-size: 512
 oauth2:
   signature-verification:
-    public-key-endpoint-uri: http://uaa/oauth/token_key
+    public-key-endpoint-uri: http://localhost:9999/oauth/token_key
     #ttl for public keys to verify JWT tokens (in ms)
     ttl: 3600000
     #max. rate at which public keys will be fetched (in ms)
